added links to projects

--- a/index.html
+++ b/index.html
@@ -23,28 +23,38 @@
     <section class="portfolio">
 
         <article class="project">
-            <h3>Dewey List</h3>
-            <img src="./images/deweylist_screenshot.png" alt="Dewey List Screenshot">
+            <a href= "https://www.deweylist.com/" target="_blank">
+                <h3>Dewey List</h3>
+                <img src="./images/deweylist_screenshot.png" alt="Dewey List Screenshot">
+            </a>
         </article>
 
         <article class="project">
-            <h3>Americana</h3>
-            <img src="./images/americana_screenshot.png" alt="Americana Screenshot">
+            <a href= "https://project-2-katiewood.herokuapp.com/" target="_blank">
+                <h3>Americana</h3>
+                <img src="./images/americana_screenshot.png" alt="Americana Screenshot">
+            </a>
         </article>
 
         <article class="project">
-            <h3>TourVia</h3>
-            <img src="./images/tourvia_screenshot.png" alt="TourVia Screenshot">
+            <a href= "http://tourvia.herokuapp.com/" target="_blank">
+                <h3>TourVia</h3>
+                <img src="./images/tourvia_screenshot.png" alt="TourVia Screenshot">
+            </a>
         </article>
 
         <article class="project">
-            <h3>What's in Your Fridge?</h3>
-            <img src="./images/whatsinyourfridge_screenshot.png" alt="What's in Your Fridge? Screenshot">
+            <a href= "https://frozen-thicket-34728.herokuapp.com/" target="_blank">
+                <h3>What's in Your Fridge?</h3>
+                <img src="./images/whatsinyourfridge_screenshot.png" alt="What's in Your Fridge? Screenshot">
+            </a>
         </article>
 
         <article class="project">
-            <h3>Rubber Duck Chomp</h3>
-            <img src="./images/rubberduckchomp_screenshot.png" alt="Rubber Duck Chomp Screenshot">
+            <a href= "https://kathrynmwood.github.io/Rubber-Duck-Chomp/" target="_blank">
+                <h3>Rubber Duck Chomp</h3>
+                <img src="./images/rubberduckchomp_screenshot.png" alt="Rubber Duck Chomp Screenshot">
+            </a>
         </article>
 
     </section>
