--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Kathryn Wood | Web Developer</title>
     <link rel="stylesheet" type="text/css" href="./main.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Playfair+Display|Raleway" rel="stylesheet">
   </head>
   <body class= "landing-page">
 
