added about and resume pages

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
     <header>
         <h1>Kathryn Wood</h1>
-        <h2>Web Developer & Brand Strategist</h2>
+        <h2>Full Stack Web Developer & Brand Strategist</h2>
     </header>
 
     <nav>
-        <a href="#">Portfolio</a>
-        <a href="#">Resume</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
+        <a href="./index.html">Portfolio</a>
+        <a href="kathrynwood_resume.pdf">Resume</a>
+        <a href="./about.html">About</a>
     </nav>
 
     <section class="portfolio">
