--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
 
     </section>
 
+    <footer>Checkout my GitHub <a href= "https://github.com/kathrynmwood">here.</a></footer>
+
   </body>
 </html>
